--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "author": "Rushikesh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "google-auth-library": "^9.11.0",
+    "googleapis": "^107.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
