--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node backend/server.js",
     "client": "npm start --prefix frontend",
-    "server": "nodemon backend/server.js",
+    "server": "NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon backend/server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder.js",
     "data:destroy": "node backend/seeder.js -d"
